2001-03-07  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* Makefile.am, makefile.mingw.in, makefile.msc.in: Set
	G_LOG_DOMAIN to \"GModule\" instead of g_log_domain_gmodule.

	* gmodule.def, gmodule.h, gmodule.c: Removed g_log_domain_gmodule.

2001-02-17  Havoc Pennington  <hp@pobox.com>

        Applied patch from Soeren Sandmann:
	
	* gmodule.c (g_module_error): G_CONST_RETURN
	(g_module_name): G_CONST_RETURN

Sat Feb 17 07:27:15 2001  Tim Janik  <timj@gtk.org>

	* gmodule.c: work around platforms that have broken RTLD_GLOBAL.

2001-01-27  Tor Lillqvist  <tml@iki.fi>

	* gmodule.c: (Win32) Need <io.h> for open() and close().

2000-12-22  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gmodule.c: Make g_module_open more tolerant wrt to the module
	name. First it tries to open the module as named, if that fails,
	it checks, whether it is a libtool archive and parses it, if that
	fails it appends the systems shared library suffix
	(i.e. ".so") (if not already found) and tries again and if that
	fails it tries to append the ".la" libtool suffix (if not already
	found) and parses it.

	* gmodule.c: Lock recursive mutex during most module functions for
	safety.

	* gmodule-dl.c: Return an error from _g_module_symbol only, if
	dlerror says so. All other functions return an error as well, if
	dlerror returns NULL.

	* testgmodule.c: Thanks to the above change the #ifdefs have
	vanished.

2000-10-15  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (BUILT_EXTRA_DIST): New variable.
	(dist-hook): Handle $(BUILT_EXTRA_DIST).

2000-09-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gmodule.h: Moved declaration of g_log_domain_gmodule up before
	the inclusion of glib.h to make it compile on non-gcc compilers.

2000-07-22  Tor Lillqvist  <tml@iki.fi>

	* makefile.mingw.in: Remove leftover gmodule-win32res.o stuff. The
	build-dll script automagically handles resources.

2000-07-20  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
