@@ -5,6 +5,18 @@
 
 	* gmodule.def, gmodule.h, gmodule.c: Removed g_log_domain_gmodule.
 
+2001-02-21  Tor Lillqvist  <tml@iki.fi>
+
+	* gmodule.h: Use G_BEGIN_DECLS and G_END_DECLS. Define
+	G_MODULE_EXPORT correctly on Cygwin, too.
+
+	* gmodule-win32.c (_g_module_open): Convert path to Windows format
+	on Cygwin.
+
+	* Makefile.am (libglib): Use libglib-1.3.la from
+	top_builddir. Invoke libtool with -no-undefined for Win32 and
+	Cygwin.
+
 2001-02-17  Havoc Pennington  <hp@pobox.com>
 
         Applied patch from Soeren Sandmann:
